# jaeb-equations

./: .gitignore  README.md  conda-environment.yml  pyproject.toml  requirements.txt
config/: basal_fitting_checks.csv  cir_fitting_checks.csv  isf_fitting_checks.csv
src/: BASAL-ALL-100-equation-results-MAPE-lastindex-final-06-01-22.xlsx  BASAL-ALL-100-equation-results-MAPE-lastindex-final-11-22-21.xlsx  CIR-ALL-100-equation-results-MAPE-lastindex-final-06-01-22.xlsx  ISF-ALL-100-equation-results-MAPE-lastindex-final-06-01-22.xlsx  annotate_with_days_carbs.py  create_dataset.py  create_equations.py  create_equations_helpers.py  create_equations_try.py  days_carbs_annotation.py  distribution_graphs.py  equation_utils.py  get_distributions.py  manual_folds.py  manual_folds_test.py  manual_folds_with_custom_loss.py  parameter_graphs.py  process_data_for_fitting.py  residual_graphs.py  test_all_splits.py  test_equations.py  test_final_equations_with_reserved_data.py  test_final_reserved.py  tir_error_graphs.py  utils.py  view_correlations.py
src/BASAL 2022-05-23/: BASAL-all-100-equation-results-MAPE-lastindex-final-05-23-22.xlsx
src/May 14-16 2022 Run/: CIR-ALL-100-equation-results-MAPE-lastindex-final-05-14-22.xlsx  ISF-ALL-100-equation-results-MAPE-lastindex-8-05-15-22.xlsx
