[tool.poetry]
name = "jaeb-equations"
version = "0.1.0"
description = ""
authors = ["Ed Nykaza <edward.t.nykaza@gmail.com>"]
readme = "README.md"
packages = [{include = "jaeb_equations"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scipy = "^1.11.1"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
